# slm-python-autocomplete

./: README.md  config.yaml  main.py  pyproject.toml
examples/: example_datamodule_usage.py  sanity_check_finetune.py
src/: data_module.py  download_dataset.py  finetune.py  model_downloader.py
